MB186-Fix cut off phone numbers

--- a/ui/client-react/src/components/fields/phoneField.scss
+++ b/ui/client-react/src/components/fields/phoneField.scss
@@ -23,6 +23,15 @@
     .extraDigits::before, .extension::before {
         content: "\00a0";
     }
+
+    .phoneData {
+        overflow: visible;
+    }
+
+    .phoneData.extraDigits {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 // Don't show phone field icons on a report
